--- a/force-app/main/default/aura/Action_InviteRP/Action_InviteRP.cmp
+++ b/force-app/main/default/aura/Action_InviteRP/Action_InviteRP.cmp
@@ -12,6 +12,9 @@
     <aura:attribute name="studySiteId" type="String" default="" access="private"/>
     <aura:attribute name="reqFieldsFilled" type="Boolean" default="true" access="private"/>
     <aura:attribute name="studySitesForInvitation" type="List" access="private"/>
+    <aura:attribute name="providerFound" type="Boolean" default="false"/>
+    <aura:attribute name="isDuplicate" type="Boolean" default="false"/>
+
 
     <!-- handlers: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
@@ -35,14 +38,14 @@
                 <div class="slds-col slds-grid slds-size_1-of-1">
                     <div class="slds-col slds-size_1-of-2 slds-p-around_medium">
                         <div class="rr-form-element">
-                            <div class="label">{!$Label.c.PG_MRC_RF_Phone}</div>
-                            <c:rrInput valueString="{!v.phone}"/>
+                            <div class="label">{!$Label.c.PG_MRC_RF_Email}</div>
+                            <lightning:input value="{!v.emailS}" type="email" onblur="{!c.checkContact}"/>
                         </div>
                     </div>
                     <div class="slds-col slds-size_1-of-2 slds-p-around_medium">
                         <div class="rr-form-element">
-                            <div class="label">{!$Label.c.PG_MRC_RF_Email}</div>
-                            <c:rrInput valueString="{!v.emailS}" type="email"/>
+                            <div class="label">{!$Label.c.PG_MRC_RF_Phone}</div>
+                            <c:rrInput valueString="{!v.phone}"/>
                         </div>
                     </div>
                 </div>
@@ -50,32 +53,52 @@
                     <div class="slds-col slds-size_1-of-2 slds-p-around_medium">
                         <div class="rr-form-element">
                             <div class="label slds-text-align_left"><abbr title="required" class="slds-required">*</abbr>{!$Label.c.PG_MRC_RF_First_Name}</div>
-                            <c:rrInput valueString="{!v.firstName}"/>
+                            <c:rrInput valueString="{!v.firstName}" disabled="{!v.providerFound}"/>
                         </div>
                     </div>
                     <div class="slds-col slds-size_1-of-2 slds-p-around_medium">
                         <div class="rr-form-element">
                             <div class="label slds-text-align_left"><abbr title="required" class="slds-required">*</abbr>{!$Label.c.PG_MRC_RF_Last_Name}</div>
-                            <c:rrInput valueString="{!v.lastName}"/>
+                            <c:rrInput valueString="{!v.lastName}" disabled="{!v.providerFound}"/>
                         </div>
                     </div>
                 </div>
+                <aura:if isTrue="{!v.providerFound || v.isDuplicate}">
+                    <div class="slds-col slds-grid slds-size_1-of-1">
+                        <div class="slds-col slds-size_1-of-2">
+                            <div class="rr-form-element">
+                                {!$Label.c.HealthCare_Provider_Found}
+                            </div>
+                        </div>
+                        <div class="slds-col slds-size_1-of-2">
+                            <div class="rr-form-element">
+                                <c:RRLink label="{!$Label.c.Different_HealthCare_Provider}" page="{!'help'}"/>
+                            </div>
+                        </div>
+                    </div>
+                </aura:if>
                 <!--<div class="rr-form-element slds-col slds-size&#45;&#45;1-of-1 slds-p-around_medium">
                     <div class="label"><abbr title="required" class="slds-required">*</abbr>{!$Label.c.PG_MRC_RF_Clinic_Name}</div>
                     <c:rrInput valueString="{!v.clinicName}"/>
                 </div>-->
-                <div class="rr-form-element slds-col slds-size--1-of-1 slds-p-around_medium" style="max-width: 100%;">
-                    <aura:if isTrue="{!!empty(v.studySitesForInvitation)}">
-                        <div class="label">{!$Label.c.PG_MRC_RF_Invite_to_Studies}</div>
-                        <div class="radio-group" style="max-width: 100%;">
-                            <aura:iteration items="{!v.studySitesForInvitation}" var="site">
-                                <lightning:input value="{!site}" type="radio" name="site"
-                                                 label="{!site.StudyName + ' (' + site.studySiteName + ')'}"
-                                                 onchange="{!c.doSelectStudy}" checked="{!site.selected}"/>
-                            </aura:iteration>
-                        </div>
-                    </aura:if>
-                </div>
+                <aura:if isTrue="{!!v.isDuplicate}">
+                    <div class="rr-form-element slds-col slds-size--1-of-1 slds-p-around_medium"
+                         style="max-width: 100%;">
+                        <aura:if isTrue="{!!empty(v.studySitesForInvitation)}">
+                            <div class="label">{!$Label.c.PG_MRC_RF_Invite_to_Studies}</div>
+                            <div class="radio-group" style="max-width: 100%;">
+                                <aura:iteration items="{!v.studySitesForInvitation}" var="site">
+                                    <lightning:input value="{!site}" type="radio" name="site"
+                                                     label="{!site.StudyName + ' (' + site.studySiteName + ')'}"
+                                                     onchange="{!c.doSelectStudy}" checked="{!site.selected}"/>
+                                </aura:iteration>
+                            </div>
+                        </aura:if>
+                    </div>
+                    <aura:set attribute="else">
+                        <div class="slds-p-top_medium">There is the sames RP in the System</div>
+                    </aura:set>
+                </aura:if>
             </div>
             <aura:set attribute="footerButtons">
                 <c:RRSpinner aura:id="modalSpinner" size="medium" showSpinner="false"/>
@@ -83,7 +106,7 @@
                     {!$Label.c.BTN_Cancel}
                 </button>
                 <button class="apollo-btn primary" onclick="{!c.doInviteRP}"
-                        disabled="{!v.reqFieldsFilled}"
+                        disabled="{!v.reqFieldsFilled || v.isDuplicate}"
                         title="{!(empty(v.lastName)||empty(v.firstName)||
                                 empty(v.clinicName)) ? $Label.c.PG_MRC_RF_Not_all_Req_Fields : ((empty(v.phone)&amp;&amp;empty(v.emailS)) ? $Label.c.PG_MRC_RF_Not_Email_or_Phone_Fields : '')}">
                     {!$Label.c.BTN_Invite}
