--- a/force-app/main/default/aura/Action_ParticipantInformation/Action_ParticipantInformation.cmp
+++ b/force-app/main/default/aura/Action_ParticipantInformation/Action_ParticipantInformation.cmp
@@ -60,7 +60,7 @@
                 </div>
                 <aura:if isTrue="{!v.pe}">
                     <div id="healthCareProvider">
-                        <c.ReferHealthcareProvider pe="{!v.pe}" action="{!v.actions.screenerResponses}"/>
+                        <c.ReferHealthcareProvider pe="{!v.pe}" action="{!v.actions.connectProvider}"/>
                     </div>
                 </aura:if>
                 <!--Status Detail Path-->
