--- a/force-app/main/default/aura/StudyCard/StudyCard.cmp
+++ b/force-app/main/default/aura/StudyCard/StudyCard.cmp
@@ -128,8 +128,7 @@
             <div class="{!v.detailsExpanded == true ? ' ' : 'slds-hide '}">
                 <aura:iteration items="{!v.currentStudy.ssList}" var="siteWrapper" indexVar="siteWrappIndx">
                     <c:StudySiteCardForPI siteWrapper="{!siteWrapper}" userMode="{!v.userMode}"
-                                          studyListViewComponent="{!v.parent}"
-                                          delegatePicklist="{!v.currentStudy.delegatePicklist}"/>
+                                          studyListViewComponent="{!v.parent}"/>
                 </aura:iteration>
             </div>
         </aura:if>
