--- a/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.cmp
+++ b/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.cmp
@@ -6,7 +6,6 @@
 
     <!-- attributes: -->
     <aura:attribute name="siteWrapper" type="Object"/>
-    <aura:attribute name="delegatePicklist" type="List"/>
     <aura:attribute name="rerenderComponent" type="Boolean" description="false"/>
     <aura:attribute name="userMode" type="String" description="HCP/PI/Patient"/>
     <aura:attribute name="studyListViewComponent" type="Aura.Component"/>
@@ -43,10 +42,10 @@
                         <div class="slds-col slds-size_1-of-1 slds-medium-size_7-of-12 ss-info-details">
                             <div class="input-fields-labels">{!$Label.c.SS_Primary_Contact}</div>
                             <c:rrSelect id="delegatesPicklist"
-                                        options="{!v.delegatePicklist}"
+                                        options="{!v.siteWrapper.delegatePicklist}"
                                         value="{!v.siteWrapper.studySite.Site_Staff__c}"
                                         class="delegate-select"
-                                        placeholder="{!if(v.delegatePicklist.length>0,$Label.c.PG_AC_Select,$Label.c.SS_Add_A_Member)}"
+                                        placeholder="{!if(v.siteWrapper.delegatePicklist.length>0,$Label.c.PG_AC_Select,$Label.c.SS_Add_A_Member)}"
                                         onchange="{!c.changeUpdatedStatus}"
                                         useSentenceFont="false"/>
                         </div>
