--- a/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
+++ b/force-app/main/default/aura/VisitResultsItem/VisitResultsItem.cmp
@@ -29,7 +29,7 @@
             <c:RRSlider value="{!v.wrapper.value}" minValue="{!v.wrapper.minValue}" maxValue="{!v.wrapper.maxValue}"
                         showFilledTrack="{!!v.isVitals}"/>
             <div class="{!v.showExpectedRange ? 'visit-result-range' : 'hidden'}">
-                {!$Label.c.Visit_Results_Tab_Expected_Range + ': ' + v.expectedRange}
+                <aura:unescapedHtml value="{!$Label.c.Visit_Results_Tab_Expected_Range + ': ' + v.expectedRange}"/>
             </div>
         </div>
         <lightning:helptext content="{!v.wrapper.description}" class="visit-result-item-description"/>
