--- a/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
+++ b/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
@@ -46,7 +46,7 @@
                             <td class="sv-t-name">{!(visitWrapper.visit.Is_Adhoc__c
                                 ? $Label.c.StudyVisit_Unscheduled_Visit
                                 : visitWrapper.visit.Visit__r.Patient_Portal_Name__c)}</td>
-                            <td class="sv-t-time">{!(visitWrapper.visit.Is_Adhoc__c ? $Label.c.StudyVisit_Ad_hoc_Visit : visitWrapper.visit.Visit_Schedule__c)}</td>
+                            <td class="sv-t-time">{!(visitWrapper.visit.Is_Adhoc__c ? $Label.c.StudyVisit_Ad_hoc_Visit : visitWrapper.visit.Visit__r.Visit_Schedule__c)}</td>
                             <td class="{!visitWrapper.visit.Is_Adhoc__c ? 'invisible' : 'sv-t-icons'}">
                                 <c:RRIconSplitter numOfIconsToDisplay="50" class="svl-icon"
                                                   value="{!visitWrapper.icons}" isScrollable="true"/>
